tests/baselines/reference/ES5For-ofTypeCheck10.errors.txt
error TS2318: Cannot find global type 'Iterable'.
tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck10.ts(11,6): error TS2304: Cannot find name 'Symbol'.


!!! error TS2318: Cannot find global type 'Iterable'.
==== tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck10.ts (1 errors) ====
    for (var v of new StringIterator) { }
    
    // In ES3/5, you cannot for...of over an arbitrary iterable.
    class StringIterator {
        next() {
            return {
                done: true,
                value: ""
            };
        }
        [Symbol.iterator]() {
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
            return this;
        }
    }